Revert "docs(demo): better demo pages"
This reverts commit b126658a92399c61d168e6e2bc43ec42baec8e80.

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "hsluv": "^0.1.0",
     "randomcolor": "^0.6.2",
     "seedrandom": "^3.0.5",
-    "simplex-noise": "^2.4.0"
+    "simplex-noise": "^2.4.0",
+    "vue": "^2.6.12"
   },
   "staticFiles": {
     "staticPath": "public"
