--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-static-files-copy": "^2.5.0",
     "pug": "^3.0.0",
-    "sass": "^1.29.0"
+    "sass": "^1.29.0",
+    "zdog": "^1.1.3"
   },
   "dependencies": {
     "chroma-js": "^2.4.2",
