--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "randomcolor": "^0.6.2",
     "seedrandom": "^3.0.5",
     "simplex-noise": "^3.0.1",
+    "spectral.js": "^2.0.0",
     "vue": "^2.6.12"
   },
   "staticFiles": {
