feat: add transpilation script for colorsort-js and update dependencies
- Introduced a new script `transpile-colorsort.mjs` to transpile colorsort-js for compatibility with older browsers.
- Updated package.json to include prebuild and postinstall scripts for automatic transpilation.
- Replaced Babel dependencies with updated versions and added necessary plugins.
- Added colorsort-js as a dependency and configured browserslist for better compatibility.

--- a/.gitignore
+++ b/.gitignore
@@ -75,6 +75,9 @@ typings/
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 
+# Generated vendor bundles
+vendor/
+
 # Next.js build output
 .next
 
